@@ -127,7 +127,6 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"BUILD_MAKEOBJECT", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_MAKEOBJECT},
 	{"BUILD_NEXTERROR", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_NEXTERROR},
 	{"BUILD_RUN", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_RUN},
-	{"BUILD_RUN2", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_RUN2},
 	{"BUILD_OPTIONS", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_OPTIONS},
 	{"BUILD_COUNT", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_COUNT},
 	{"TOOLS_OPENCOLORCHOOSER", GEANY_KEY_GROUP_TOOLS, GEANY_KEYS_TOOLS_OPENCOLORCHOOSER},
